[fix] error message wrap + folder creation

--- a/src/styles/filenameinput.styl
+++ b/src/styles/filenameinput.styl
@@ -6,3 +6,4 @@
 
     .coz-errors
         top-padded(.8em)
+        white-space normal
